DONE figures 3d with kappa, sigma, Nc and g | TODO TADs

--- a/partial_raports/partial2.tex
+++ b/partial_raports/partial2.tex
@@ -233,7 +233,7 @@ where $\Theta$ summarizes the experiment parameters, $$\Theta = (N,b,N_c,g,\vare
 
 \subsection{First Encounter Time (FET) distribution when CLs are kept and removed in the damage foci}
 
-Since the FET distribution can be approximated by a single exponential \cite{amitai12}, an exponential function with parameters $a, \lambda$ such that $t \mapsto a \exp(- \lambda t)$ is fitted to the frequency histograms, aiming to compare the $\lambda$ fitted in each one of the experiments sets.
+Since the FET distribution can be approximated by a single exponential \cite{amitai12}, an exponential function with amplitude $a$ and rate $\lambda$ as parameters,$t \mapsto a \exp(- \lambda t)$, is fitted to the frequency histograms, aiming to compare the $\lambda$ fitted in each one of the experiments sets.
 
 \begin{figure}[h!]
 	\centering
@@ -361,6 +361,17 @@ In conclusion, \textbf{the compactness help to repair polymers cut in a small ne
 	\includegraphics[width=\textwidth]{../DNA_Religation/figures/__v_Nc_keepANDremove_g20and4.png}
 	\caption{Repair probability (A), MSRG at encounter time (B), mean FET (C) and fitted encounter rate parameter ($\lambda$) (D) as functions of $N_c$  when $g = 20$ (left) and $g = 4$ (right), for $N = 100$, $N_d = 2$ and $\varepsilon = \tilde{\varepsilon}(\xi)$.} 
 	\label{fig:all_v_Nc_Nd2}
+\end{figure}
+
+\clearpage
+
+\subparagraph*{Summary of the effects of $g$ and $N_c$ on the repair}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{../DNA_Religation/figures/p3d_v_gNc.png}
+	\caption{Repair probability as function of $g$ and $N_c$ with $N = 100$, $N_d = 1$ and $\xi$-adaptive $\varepsilon$. \textbf{A.} Probability surface when CLs are kept in the DF. \textbf{B.} Comparison between the probability surfaces when CLs are kept (as in A) and removed.} 
+	\label{fig:proba3d_v_g_Nc}
 \end{figure}
 
 \clearpage
